--- a/style.css
+++ b/style.css
@@ -15,10 +15,19 @@
 }
 
 .center {
-    border-radius: 10px;
+   border-radius: 10px;
   background: #bb004b;
   width: 450px;
+  display: none;
+  transition: 0.5s ease-in-out;
 }
+
+.center:hover {
+    border-radius: 20px;
+   background: #bb004b;
+   width: 450px;
+   display: none;
+ }
 
 .button-section {
   color: #bb004b;
@@ -45,8 +54,14 @@ p {
   text-align: center;
   line-height: 2;
   font-weight: 600;
-  color: whitesmoke;
+  color:whitesmoke;
   font-size: 2rem;
   padding: 20px 20px;
-  transition: 0.2s;
+  transition: 0.5s ease-in-out;
+}
+
+p:hover{
+  font-size: 2.05rem;
+  cursor:context-menu;
+
 }
