--- a/style.css
+++ b/style.css
@@ -63,5 +63,11 @@ p {
 p:hover{
   font-size: 2.05rem;
   cursor:context-menu;
+}
 
+.center h4{
+  color:azure;
+  text-align: right;
+  padding: 1rem;
+  font-style:italic;
 }
